force-app/main/default/objects/BLN_AccountRuleParameter__c/BLN_AccountRuleParameter__c.object-meta.xml
<CustomObject>
    <description>FOUK-1904</description>
    <label>Account Rule Parameter</label>
    <nameField>
        <displayFormat>ARP-{000000}</displayFormat>
        <label>Account Rule Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Rule Parameters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>