force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Account__c.field-meta.xml
<CustomField>
    <fullName>BLN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mandatory relationship to the Account to which Account rule parameter applies to.(FOUK-1904)</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>BLN_AccountRuleParameters</relationshipName>
    <type>Lookup</type>
</CustomField>