force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AccountRuleGroup__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountRuleGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Rule Group</label>
    <referenceTo>BLN_AccountGroupRule__c</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>