force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AccountRuleParameterId__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountRuleParameterId__c</fullName>
    <description>FOUK-11876</description>
    <label>Account Rule Parameter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>