force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ActiveTo__c.field-meta.xml
<CustomField>
    <fullName>BLN_ActiveTo__c</fullName>
    <description>Specifies validity date for Account Rule Parameter. This date will be set when Account Rule Parameter will be agreed. If data is not set - ARP is considered not activated. (FOUK-1904)</description>
    <label>Active To</label>
    <type>Date</type>
</CustomField>