force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AfterHours__c.field-meta.xml
<CustomField>
    <fullName>BLN_AfterHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>After hours define which time scheme is used to determine if job for the account is being treated as after hours or not.

If After Hours account rule parameter is not set up on Account, default Salesforce Busines Hours will be used and defualt charge will be applied.</description>
    <label>After Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>