force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AnswerType__c.field-meta.xml
<CustomField>
    <fullName>BLN_AnswerType__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>