force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AnswerValidation__c.field-meta.xml
<CustomField>
    <fullName>BLN_AnswerValidation__c</fullName>
    <label>Answer Validation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>