force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AuthorisationRequired__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorisationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6068. This is the reference field of Authorisation Required.</description>
    <label>Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>