force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AuthorizationLimit__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorizationLimit__c</fullName>
    <description>Amount of authorization limit. Auth limit is only based on the cost to the corporate (e.g not including the excess)
Parameter defines amount only - currency is determined based on related Account currency.</description>
    <label>Authorization Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>