force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_AutomaticDiverttoAuthorisationTeam__c.field-meta.xml
<CustomField>
    <fullName>BLN_AutomaticDiverttoAuthorisationTeam__c</fullName>
    <description>&quot;Rules diverts job to appropriate authorisation team (BVT or FLTR). Authorisation team is determined by the indicator on the account level.
2 options for job diversion: all jobs needs to be diverted to auth team or only jobs that are manually verified (job manually matched to B2B Account)&quot;</description>
    <label>Automatic Divert To Auth Team Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Cases for Validation</fullName>
            </value>
            <value>
                <fullName>Non-PDS Cases for Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>