force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_BonusThreshold__c.field-meta.xml
<CustomField>
    <fullName>BLN_BonusThreshold__c</fullName>
    <description>FOUK-6522 Optional field on ARP to contain Bonus Threshold</description>
    <label>Bonus Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>