force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ClaimsHandlingFeeSetup__c.field-meta.xml
<CustomField>
    <fullName>BLN_ClaimsHandlingFeeSetup__c</fullName>
    <description>&quot;Setting this parameter does not consider CHF for the job. Value Apply - defaulted value represents the same scenario when paramter is not set at all. Value Exclude - does not consider CHF for the job Always apply CHF VAT to Insurer - same as Apply but CHF Vat is applied to Insurer

Apply = Claims Handling Fee always applied to all associated jobs

Exclude = Claims Handling Fee should not be applied to associated jobs

Always apply CHF VAT to Insurer = Claims Handling Fee always applies to all associated jobs and VAT for the Claims Handling Fee must be applied to the insurance account&quot;</description>
    <label>Claims Handling Fee Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apply</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
            <value>
                <fullName>Always apply CHF VAT to Insurer</fullName>
                <label>Always apply CHF to Insurer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>