force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Contract__c.field-meta.xml
<CustomField>
    <fullName>BLN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-6522 Optional relationship to Contract which defines this Account Rule Parameter.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>