force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_DelegatedAuthority__c.field-meta.xml
<CustomField>
    <fullName>BLN_DelegatedAuthority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set on account, Claims Handling fee will be VAT Exempt if the job has been handled within the Delegated Authority parameters. If the job falls outside of the Delegated Authority parameters (i.e. we have had to seek authorisation from the insurer e.g. the job value was over the authorisation limit) then VAT should be applied to the CHF</description>
    <label>Delegated Authority</label>
    <type>Checkbox</type>
</CustomField>