force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_EDITypeCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_EDITypeCode__c</fullName>
    <description>FOUK-9626. Field is created under this story.</description>
    <label>EDI Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDAT</fullName>
            </value>
            <value>
                <fullName>MILE</fullName>
            </value>
            <value>
                <fullName>CNOT</fullName>
            </value>
            <value>
                <fullName>ONUM</fullName>
            </value>
            <value>
                <fullName>CARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>