force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_InLineWithStandardSLA__c.field-meta.xml
<CustomField>
    <fullName>BLN_InLineWithStandardSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6522 Field for checking if ARP is in line to Standard SLA</description>
    <label>In Line with Standard SLA?</label>
    <type>Checkbox</type>
</CustomField>