force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_InsurerAccount__c.field-meta.xml
<CustomField>
    <fullName>BLN_InsurerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Rule Parameters (Insurer Account)</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>