force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_IsActive__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsActive__c</fullName>
    <description>- checkbox=True when (Today is &lt;=Active To) and (Today&gt;=Active From). 
- checkbox=True when Active To &amp; Active From = null

Calculated field - not to be mapped into MDM</description>
    <formula>OR (
  AND (
    TODAY() &gt;= BLN_ActiveFrom__c,
    TODAY() &lt;= BLN_ActiveTo__c
  ),
  AND (
     ISBLANK(BLN_ActiveFrom__c),
     ISBLANK(BLN_ActiveTo__c) 
  ),
  AND (
   
    TODAY() &gt;= BLN_ActiveFrom__c, 
    ISBLANK(BLN_ActiveTo__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>