force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_LegacyAccountRuleParameterId__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyAccountRuleParameterId__c</fullName>
    <description>R2DM-290</description>
    <externalId>true</externalId>
    <label>Legacy Account Rule Parameter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>