force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyCreatedDate__c</fullName>
    <description>R2DM-290 - Stores the legacy created date of the record for migrated data.</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>