force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>BLN_Mandatory__c</fullName>
    <label>Mandatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Mandatory for Case Closure</fullName>
            </value>
            <value>
                <fullName>Mandatory for Quality Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>