force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_MDMAccountRuleParameterID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMAccountRuleParameterID__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM Account Rule Parameter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>