force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_MigratedData__c.field-meta.xml
<CustomField>
    <fullName>BLN_MigratedData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R2DM-290. Identified if a record is migrated data or not.</description>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>