force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_OEAuthorization__c.field-meta.xml
<CustomField>
    <fullName>BLN_OEAuthorization__c</fullName>
    <description>Parameter controls if OE glass requirement for an account. OE glass might be enforced, not allowed, within motorists liability, allowed or extra authorisation might be needed.</description>
    <label>OE Authorization Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OE Glass Only</fullName>
            </value>
            <value>
                <fullName>Non-OE Glass Only</fullName>
            </value>
            <value>
                <fullName>OE Motorist Liability</fullName>
            </value>
            <value>
                <fullName>OE Authorisation Required</fullName>
            </value>
            <value>
                <fullName>OE Glass Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>