force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BLN_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to Opportunity which processes given Account Rule Parameter (FOUK-1904)</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>BLN_AccountRuleParameters</relationshipName>
    <type>Lookup</type>
</CustomField>