force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ParameterUsageInstruction__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParameterUsageInstruction__c</fullName>
    <description>Description field for storing additional instructions to be added by Sales Team member when configuring Account Rule Parameter. This instructions can be used by CSR or other actor when applying the rule. Example: In OE rule additional contractual terms and conditions needs to be set (for example around vehicle age, if this is leased vehicle etc). (FOUK-1904)</description>
    <label>Parameter Usage Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>