force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ParamValueCheckbox__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParamValueCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Account Rule Parameter Definitions which require checkbox field to store parameter value. Example: VAT disabled (FOUK-1904)</description>
    <label>Param Value (Checkbox)</label>
    <type>Checkbox</type>
</CustomField>