force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ParamValueNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParamValueNumber__c</fullName>
    <description>Used for Account Rule Parameter Definitions which require number field to store parameter value. (FOUK-1904)</description>
    <label>Param Value (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>