force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ParamValueText__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParamValueText__c</fullName>
    <description>Used for Account Rule Parameter Definitions which require text field to store parameter value. (FOUK-1904)</description>
    <label>Param Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>