force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_PenaltyThreshold__c.field-meta.xml
<CustomField>
    <fullName>BLN_PenaltyThreshold__c</fullName>
    <description>FOUK-6522 Optional field on ARP to contain Penalty Threshold</description>
    <label>Penalty Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>