force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>BLN_PicklistValues__c</fullName>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>