force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_PolicyLimit__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyLimit__c</fullName>
    <label>Policy Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>