force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_PolicyNumbers__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyNumbers__c</fullName>
    <description>FOUK - 6460</description>
    <label>Policy Number/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>