force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Procedure__c.field-meta.xml
<CustomField>
    <fullName>BLN_Procedure__c</fullName>
    <label>Procedure Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>