force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Product__c.field-meta.xml
<CustomField>
    <fullName>BLN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>