force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ProductAllowance__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductAllowance__c</fullName>
    <description>FOUK-6068. This is the reference field of Product Allowance.</description>
    <label>Product Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow All</fullName>
            </value>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Pass Liability</fullName>
            </value>
            <value>
                <fullName>Do Not Show</fullName>
            </value>
            <value>
                <fullName>Do Not Show All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>