force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductCategory__c</fullName>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>