force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductCode__c</fullName>
    <description>Create as part of FOUK-10972</description>
    <formula>BLN_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>