force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Question__c.field-meta.xml
<CustomField>
    <fullName>BLN_Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>