force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Quote__c.field-meta.xml
<CustomField>
    <fullName>BLN_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-2020 Optional relationship to Quote which account rule parameter is configured for. This relationship will be created within b2b sales process.</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Account Rule Parameters for Parent Quote</relationshipLabel>
    <relationshipName>Account_Rule_Parameters_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>