force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Reason__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>