force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Reference__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>