force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_Remainder__c.field-meta.xml
<CustomField>
    <fullName>BLN_Remainder__c</fullName>
    <label>Remainder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motorist</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Secondary Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>