force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_RepairExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_RepairExcess__c</fullName>
    <label>Repair Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>