force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ReplacementExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_ReplacementExcess__c</fullName>
    <label>Replacement Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>