force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_SLAApproved__c.field-meta.xml
<CustomField>
    <fullName>BLN_SLAApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6522 Field to check if SLA approved or not</description>
    <label>SLA Approved?</label>
    <type>Checkbox</type>
</CustomField>