force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_SLAType__c.field-meta.xml
<CustomField>
    <fullName>BLN_SLAType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>FOUK-6522 Lookup field for SLA record types to SLA Definition custom object</description>
    <label>SLA Type</label>
    <referenceTo>BLN_SLADefinition__c</referenceTo>
    <relationshipLabel>Account Rule Parameters</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>