force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_SplitBill__c.field-meta.xml
<CustomField>
    <fullName>BLN_SplitBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Bill</label>
    <referenceTo>BLN_AccountRuleParameter__c</referenceTo>
    <relationshipLabel>Product Excesses</relationshipLabel>
    <relationshipName>Account_Rule_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>