force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ThresholdValue__c.field-meta.xml
<CustomField>
    <fullName>BLN_ThresholdValue__c</fullName>
    <description>FOUK-6522 Field on Account Rule Parameter to hold threshold value</description>
    <label>Threshold Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>