force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_ValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>BLN_ValidationMessage__c</fullName>
    <label>Validation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>