force-app/main/default/objects/BLN_AccountRuleParameter__c/fields/BLN_VATToMotorist__c.field-meta.xml
<CustomField>
    <fullName>BLN_VATToMotorist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This rule specified on Legal Entity Account or Site - drives if VGRR VAT part of the job should be assigned to Motorist if motorist is VAT registered. If this rule is not set, or set to False, or Motorist is not VAT Registered - VGRR Vat goes to the Insurer.</description>
    <label>VAT To Motorist</label>
    <type>Checkbox</type>
</CustomField>