force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_AfterHours.recordType-meta.xml
<RecordType>
    <fullName>BLN_AfterHours</fullName>
    <active>true</active>
    <label>After Hours</label>
</RecordType>