force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_AuthorizationLimit.recordType-meta.xml
<RecordType>
    <fullName>BLN_AuthorizationLimit</fullName>
    <active>true</active>
    <description>Authorization Limit</description>
    <label>Authorization Limit</label>
</RecordType>