force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_AutomaticDiverttoAuthorisationTeam.recordType-meta.xml
<RecordType>
    <fullName>BLN_AutomaticDiverttoAuthorisationTeam</fullName>
    <active>true</active>
    <label>Automatic Divert to Authorisation Team</label>
</RecordType>