force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_DataCollect.recordType-meta.xml
<RecordType>
    <fullName>BLN_DataCollect</fullName>
    <active>true</active>
    <label>Data Collect</label>
</RecordType>