force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_DelegatedAuthority.recordType-meta.xml
<RecordType>
    <fullName>BLN_DelegatedAuthority</fullName>
    <active>true</active>
    <label>Delegated Authority</label>
</RecordType>