force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_DelegatedAuthorityClaimsHandlingFeeSetup.recordType-meta.xml
<RecordType>
    <fullName>BLN_DelegatedAuthorityClaimsHandlingFeeSetup</fullName>
    <active>true</active>
    <label>Delegated Authority - Claims Handling Fee Setup</label>
</RecordType>