force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_OEAuthorization.recordType-meta.xml
<RecordType>
    <fullName>BLN_OEAuthorization</fullName>
    <active>true</active>
    <label>OE Authorization</label>
</RecordType>