force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_ProductAllowance.recordType-meta.xml
<RecordType>
    <fullName>BLN_ProductAllowance</fullName>
    <active>true</active>
    <description>FOUK-6068. This is the reference Record type of Product Allowance.</description>
    <label>Product Allowance</label>
</RecordType>