force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_ProductExcess.recordType-meta.xml
<RecordType>
    <fullName>BLN_ProductExcess</fullName>
    <active>true</active>
    <label>Product Excess</label>
</RecordType>