force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_SLA.recordType-meta.xml
<RecordType>
    <fullName>BLN_SLA</fullName>
    <active>true</active>
    <label>SLA</label>
</RecordType>