force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_SplitBill.recordType-meta.xml
<RecordType>
    <fullName>BLN_SplitBill</fullName>
    <active>true</active>
    <label>Split Bill</label>
</RecordType>