force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/BLN_VATToMotorist.recordType-meta.xml
<RecordType>
    <fullName>BLN_VATToMotorist</fullName>
    <active>true</active>
    <label>VAT To Motorist</label>
</RecordType>