force-app/main/default/objects/BLN_AccountRuleParameter__c/recordTypes/Procedure.recordType-meta.xml
<RecordType>
    <fullName>Procedure</fullName>
    <active>true</active>
    <description>Record Type to store Procedure records</description>
    <label>Procedure</label>
</RecordType>