force-app/main/default/objects/BLN_AccountRuleParameter__c/validationRules/BLN_AccountOrAGRisMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>BLN_AccountOrAGRisMandatory</fullName>
    <active>true</active>
    <description>FOUK-5363 one of Account or Account group Rule is mandatory on ARP.</description>
    <errorConditionFormula>AND(
        ISBLANK(BLN_Account__c),
        ISBLANK(BLN_AccountRuleGroup__c),
        RecordType.DeveloperName &lt;&gt; &apos;BLN_ProductExcess&apos;
    
)</errorConditionFormula>
    <errorMessage>Either of Account and Account Rule Group should be populated</errorMessage>
</ValidationRule>