force-app/main/default/objects/BLN_AccountRuleParameter__c/validationRules/BLN_ActiveToGreaterThanActiveFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>BLN_ActiveToGreaterThanActiveFrom</fullName>
    <active>true</active>
    <description>Active To date field must be greater than Active From date field (to check on record insert and update) (FOUK-1904)</description>
    <errorConditionFormula>AND(
  OR (
    ISNEW(),
    ISCHANGED(BLN_ActiveFrom__c),
    ISCHANGED(BLN_ActiveTo__c)
  ),
  NOT($Permission.BLN_BypassValidationRules),
  NOT(ISBLANK(BLN_ActiveFrom__c)),
  NOT(ISBLANK(BLN_ActiveTo__c)),
  BLN_ActiveFrom__c &gt; BLN_ActiveTo__c
)</errorConditionFormula>
    <errorMessage>Active To date must be greater than Active From.</errorMessage>
</ValidationRule>